--- a/Servidor/package.json
+++ b/Servidor/package.json
@@ -3,18 +3,18 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "dependencies": {
-    "express": "^4.18.1",
-    "morgan": "^1.10.0",
-    "nodemon": "^2.0.16",
-    "typescript": "^4.7.3"
-  },
-  "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev":"node index.js"
+    "dev": "nodemon",
+    "jison": "jison ./src/gramatica/gramatica.jison && mv gramatica.js ./src/gramatica"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@types/node": "^17.0.42"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.16",
+    "ts-node": "^10.8.1"
+  }
 }
