--- a/Servidor/package.json
+++ b/Servidor/package.json
@@ -5,15 +5,22 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon",
-    "jison": "jison ./src/gramatica/gramatica.jison && mv gramatica.js ./src/gramatica"
+    "jison": "jison ./src/gramatica/gramatica.jison && mv gramatica.js ./src/gramatica",
+    "start": "tsc && node dist/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/node": "^17.0.42"
+    "cors": "^2.8.5",
+    "express": "^4.18.1",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/morgan": "^1.9.3",
+    "@types/node": "^17.0.43",
     "nodemon": "^2.0.16",
     "ts-node": "^10.8.1"
   }
